--- a/index.html
+++ b/index.html
@@ -23,10 +23,22 @@
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                 work. That's why I am learning and mastering web development. I will not stop until I become the Web
                 Development Hero.</p>
-            <a class="hear" href="http://google.com" target="blank">HELP ME</a>
+            <a class="link-button" href="http://google.com" target="blank">HELP ME</a>
         </div>
         <div class="half-width">
             <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+    <section class="drem-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Big Dream</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" href="http://facebook.com">facebook</a>
         </div>
     </section>
 </body>
