--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-    <section class="top">
+    <section class="top flexible-container">
         <div class="half-width">
             <h1>Welcome To </h1>
-            <h1 class="color"><span>Md Akther</span> Hossen</h1>
+            <h1><span class="color">Md Akther</span> Hossen</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                 work. That's why I am learning and mastering web development. I will not stop until I become the Web
@@ -29,7 +29,7 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
-    <section class="drem-big">
+    <section class="drem-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -40,6 +40,29 @@
                 to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
             <a class="link-button" href="http://facebook.com">facebook</a>
         </div>
+    </section>
+    <section class="experience-area">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div id="web-dev-experience" class="experience">
+                <h1>Full Stack Developer</h1>
+                <h3 class="color">Full Stack Web Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="web-dev-experiencei" class="experience">
+                <h1>Baby Web Developer</h1>
+                <h3 class="color">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
+    <section>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
     </section>
 </body>
 
